--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./src/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="src/input.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 
 <body>
     <nav class="navbar bg-[#270082] text-white flex justify-between flex-wrap p-6  items-center">
-        <div class="head-text text-[2.5rem] font-roboto font-bold pr-20 pl-20 mx-auto mx-0 md:text-[2.5rem] font-roboto font-bold pr-20 pl-20">myTunes</div>
+        <div class="head-text text-[2.5rem] font-roboto font-bold pr-20 pl-20 ">myTunes</div>
         <div
             class="nav-items flex justify-center flex-wrap gap-9 text-2xl items-center pr-20 pl-20 font-josefin font-[350] ">
             <p>Overview</p>
@@ -21,21 +21,33 @@
     </nav>
     <main>
         <!-- content one started -->
-        <div  style="background-image: url(assets/main-image.png);
+        <div style="background-image: url(assets/main-image.png);
          width: 100%;
           height: 1000px;
            background-size: cover;">
             <div class="main-text font-josefin ">
                 <h1>myTunes</h1>
                 <h3 class="second-text font-josefin">Your music, movies, and TV shows take centre stage.</h3>
-                <p class="third-text font-josefin">myTunes is the best way to organize and enjoy the music, movies, and TV shows you already have -
-and shop for the once you want. Enjoy all the entertainment myTunes has to offer on your Mac and PC.</p>
+                <p class="third-text font-josefin">myTunes is the best way to organize and enjoy the music, movies, and
+                    TV shows you already have -
+                    and shop for the once you want. Enjoy all the entertainment myTunes has to offer on your Mac and PC.
+                </p>
             </div>
         </div>
         <!-- content one ended -->
 
         <!-- content two started -->
-         <div class="content-two bg-amber-950"></div>
+        <div class="content-two bg-[#281154] text-white p-13  items-center text-center ">
+            <h1 class="text-[5rem] text-center  font-josefin font-[300] tracking-tight m-4 ">
+                ♪ Music
+            </h1>
+            <h3 class="text-[2rem] text-center font-josefin font-[800] pb-10 ">45 million songs. Zero ads.</h3>
+            <p class="font-roboto text-[1.4rem] p-6 m-5 ">Stream over 45 million songs, Or download albums and tracks to listen offline. All the music in your personal
+myTunes library-no matter where it came from-live right alongside the Orange music catelog. Start your free three
+month trail with no commitment, and cancel anytime</p>
+            <button class="trail-btn bg-red-600 p-[12px] w-[250px] h-[80] text-2xl font-josefin font-light">Start Your Trail Now</button>
+            <p class="font-josefin font-light pt-12 text-[1.3rem] p-10">Orange Music is available in myTunes and for iOS and Android devices.</p>
+        </div>
         <!-- content two ended -->
 
 
