white box completed

--- a/index.html
+++ b/index.html
@@ -36,19 +36,51 @@
         </div>
         <!-- content one ended -->
 
-        <!-- content two started -->
-        <div class="content-two bg-[#281154] text-white p-13  items-center text-center ">
+        <!-- purple box started -->
+        <div class="content-two bg-[#281154] text-white p-13   items-center text-center m-10  min-h-screen ">
             <h1 class="text-[5rem] text-center  font-josefin font-[300] tracking-tight m-4 ">
                 ♪ Music
             </h1>
             <h3 class="text-[2rem] text-center font-josefin font-[800] pb-10 ">45 million songs. Zero ads.</h3>
-            <p class="font-roboto text-[1.4rem] p-6 m-5 ">Stream over 45 million songs, Or download albums and tracks to listen offline. All the music in your personal
-myTunes library-no matter where it came from-live right alongside the Orange music catelog. Start your free three
-month trail with no commitment, and cancel anytime</p>
-            <button class="trail-btn bg-red-600 p-[12px] w-[250px] h-[80] text-2xl font-josefin font-light">Start Your Trail Now</button>
-            <p class="font-josefin font-light pt-12 text-[1.3rem] p-10">Orange Music is available in myTunes and for iOS and Android devices.</p>
+            <p class="font-roboto text-[1.4rem] p-6 m-5 ">Stream over 45 million songs, Or download albums and tracks to
+                listen offline. All the music in your personal
+                myTunes library-no matter where it came from-live right alongside the Orange music catelog. Start your
+                free three
+                month trail with no commitment, and cancel anytime</p>
+            <button class="trail-btn bg-red-600 p-[12px] w-[250px] h-[80] text-2xl font-josefin font-light">Start Your
+                Trail Now</button>
+            <p class="font-josefin font-light pt-12 text-[1.3rem] p-10 ">Orange Music is available in myTunes and for
+                iOS
+                and Android devices.</p>
         </div>
-        <!-- content two ended -->
+        <!-- purple box ended -->
+
+
+        <!--white box started  -->
+        <div class="white-box items-center text-center">
+            <div class="ipad-image ">
+                <center><img src="assets/image-2.png" alt="ipad-image" class="max-w-full h-auto "></center>
+            </div><br>
+            <div class="white-box-text">
+                <h1 class="font-roboto text-4xl font-[500] pb-10">The movie and TV collection you always wished for.
+                    Granted.
+                </h1>
+                <p class="font-josefin text-3xl font-light pb-10">With over 100,000 movies and Tv shows to choose from,there's
+                    always something great to watch
+                    on myTunes and if you watch on orange TV 4K, you,ll be able to enjoy a tremendous selection <br>
+                    of your favorite content in 4K HDR. So get ready to enjoy episodes of your favorite TV shows or hit
+                    movies you've been waiting <br>to see -- anytime, anywhere Just Tap to play, or even download if
+                    you're going somewhere you won't have Wi-Fi.
+
+
+                </p>
+                <button class="read-more-btn text-white bg-[#281154] p-[10px]  text-[1.3rem] font-josefin font-light">Read More</button>
+            </div>
+           <center> <div class="mac-image items-center p-10"><img src="assets/mac-image.png" alt=""></div></center>
+        </div>
+
+        <!--white box ended  -->
+
 
 
     </main>
