--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
          width: 100%;
           height: 1000px;
            background-size: cover;">
-            <div class="main-text font-josefin ">
-                <h1>myTunes</h1>
-                <h3 class="second-text font-josefin">Your music, movies, and TV shows take centre stage.</h3>
-                <p class="third-text font-josefin">myTunes is the best way to organize and enjoy the music, movies, and
+            <div class="main-text font-josefin text-white text-center items-center">
+                <h1 class="text-4xl text-center ">myTunes</h1>
+                <h3 class="second-text font-josefin pt-6">Your music, movies, and TV shows take centre stage.</h3>
+                <p class="third-text font-josefin pt-8 ">myTunes is the best way to organize and enjoy the music, movies, and
                     TV shows you already have -
                     and shop for the once you want. Enjoy all the entertainment myTunes has to offer on your Mac and PC.
                 </p>
@@ -65,7 +65,8 @@
                 <h1 class="font-roboto text-4xl font-[500] pb-10">The movie and TV collection you always wished for.
                     Granted.
                 </h1>
-                <p class="font-josefin text-3xl font-light pb-10">With over 100,000 movies and Tv shows to choose from,there's
+                <p class="font-josefin text-3xl font-light pb-10">With over 100,000 movies and Tv shows to choose
+                    from,there's
                     always something great to watch
                     on myTunes and if you watch on orange TV 4K, you,ll be able to enjoy a tremendous selection <br>
                     of your favorite content in 4K HDR. So get ready to enjoy episodes of your favorite TV shows or hit
@@ -74,21 +75,108 @@
 
 
                 </p>
-                <button class="read-more-btn text-white bg-[#281154] p-[10px]  text-[1.3rem] font-josefin font-light">Read More</button>
+                <button
+                    class="read-more-btn text-white bg-[#281154] p-[10px]  text-[1.3rem] font-josefin font-light">Read
+                    More</button>
             </div>
-           <center> <div class="mac-image items-center p-10"><img src="assets/mac-image.png" alt=""></div></center>
+            <center>
+                <div class="mac-image items-center p-10"><img src="assets/mac-image.png" alt=""></div>
+            </center>
         </div>
 
         <!--white box ended  -->
 
-        
+
         <!-- content four started -->
+        <div class="content-four text-white items-center text-center font-josefin "
+            style="background-image: url(assets/image-3.png); width: 100% ; height: 700px; background-size: cover;">
+            <h3 class=" text-4xl p-5 font-[380]">
+                A world of entertainment. Available wherever you are.
+            </h3>
+            <p class="font-light text-3xl pt-6 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eius
+                reiciendis aspernatur labore, quas
+                veniam nemo rem modi rerum <br>quo quidem quos hic aut exercitationem dicta sequi? Nostrum natus
+                quisquam <br>id nesciunt mollitia quasi dolorem amet ut dolore, eius ipsam?
+
+            </p>
+        </div>
         <!-- content four ended -->
 
+        <!-- gift cards started -->
+        <div class="gift-cards items-center  p-10">
+            <div class="card-image pt-10 "><img src="assets/gift-card-image.png" alt=""></div>
+            <div class="card-text">
+                <h2 class="font-roboto font-[400] text-3xl text-center pt-24">Gift Cards</h2><br>
+                <p class="font-light font-josefin text-center text-[1.3rem]">Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Dicta commodi inventore pariatur dolores amet, quod enim dolore incidunt. Porro
+                    incidunt nesciunt ad necessitatibus est perferendis deleniti non similique blanditiis, adipisci
+                    veniam repellat qui voluptates quae consectetur illo temporibus. Impedit, perspiciatis!</p><br>
+                <h6 class="font-roboto text-[1.5rem] font-300 text-center p-6">Already have an Orange myTune Music Gift
+                    Cards
+                </h6>
+                <center> <button
+                        class="reedem-btn text-white bg-[#281154] p-[10px]  text-[1.3rem] font-josefin font-light ">Redeem</button>
+                </center>
+            </div>
 
 
+        </div>
+        <!-- gift cards ended -->
     </main>
-    <footer></footer>
+
+    <!-- footer started -->
+    <footer>
+        <div class="footer bg-[#281154] text-white font-josefin  flex justify-evenly flex-wrap">
+        <div class="shop-conatiner">
+            <h4 class="text-3xl pb-6 font-[350] ">Shop and Learn</h4><hr>
+            <ul class="pt-4 font-light leading-none">
+            <li>Music</li>
+            <li>Movies</li>
+            <li>Shows</li>
+            <li>Apps</li>
+            <li>Gift Cards</li>
+            </ul>
+        </div>
+        <div class="orang-store-conatiner">
+            <h4 class="text-3xl pb-6 font-[350]" >Orange Store</h4><hr>
+            <ul class="font-light">
+            <li>Find a Store</li>
+            <li>Today at Orange</li>
+            <li>Financing</li>
+            <li>Orange Camp</li>
+            <li>Order Status</li>
+            </ul>
+        </div>
+        <div class="Education-container">
+            <h4 class="text-3xl pb-6 font-[350]">Education & Business</h4><hr>
+            <ul class="pt-4 font-light">
+            <li>Orange & Education</li>
+            <li>Shop for Collage</li>
+            <li>Orange & Business</li>
+            <li>Shop for Business</li>
+            <li>Jobs</li>
+            </ul>
+        </div>
+        <div class="about-conatiner">
+        <h4 class="text-3xl pb-6 font-[350]">About Orange</h4><hr>
+            <ul class="pt-4 font-light">
+            <li>Newsroom</li>
+            <li>Orange Leadership</li>
+            <li>Investors</li>
+            <li>Envents</li>
+            <li>Contact Orange</li>
+            </ul>
+        </div>
+        </div>
+    </footer>
+    <!-- footer ended -->
+
+    <!-- last content -->
+     <div class="end bg-[#270082] p-5 text-white text-center font-roboto">
+        <p class="text-[1.3rem]">Copyright © 2022 ABD</p>
+     </div>
+    <!-- last ended -->
+
 </body>
 
 </html>
