--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Music Website</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/fav-icon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/fav-icon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/fav-icon/favicon-16x16.png">
+<link rel="manifest" href="/assets/fav-icon/site.webmanifest">
     <link href="./src/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="src/style.css">
+    <!-- <link rel="stylesheet" href="src/style.css"> -->
 </head>
 
 <body>
+    <!-- navbar started -->
     <nav class="navbar bg-[#270082] text-white flex justify-between flex-wrap p-6  items-center">
         <div class="head-text text-[2.5rem] font-roboto font-bold pr-20 pl-20 ">myTunes</div>
         <div
@@ -19,16 +25,18 @@
             <p>Gift Cards</p>
         </div>
     </nav>
+    <!-- navbar ended -->
+
     <main>
         <!-- content one started -->
-        <div style="background-image: url(assets/main-image.png);
+        <div style="background-image: url(assets/images/main-image.png);
          width: 100%;
           height: 1000px;
            background-size: cover;">
             <div class="main-text font-josefin text-white text-center items-center">
-                <h1 class="text-4xl text-center ">myTunes</h1>
-                <h3 class="second-text font-josefin pt-6">Your music, movies, and TV shows take centre stage.</h3>
-                <p class="third-text font-josefin pt-8 ">myTunes is the best way to organize and enjoy the music, movies, and
+                <h1 class="text-9xl text-center pt-[400px] font-[400]">myTunes</h1>
+                <h3 class="second-text font-josefin pt-20 text-5xl font-[350]" >Your music, movies, and TV shows take centre stage.</h3>
+                <p class="third-text font-josefin p-20 text-4xl font-light">myTunes is the best way to organize and enjoy the music, movies, and
                     TV shows you already have -
                     and shop for the once you want. Enjoy all the entertainment myTunes has to offer on your Mac and PC.
                 </p>
@@ -37,7 +45,7 @@
         <!-- content one ended -->
 
         <!-- purple box started -->
-        <div class="content-two bg-[#281154] text-white p-13   items-center text-center m-10  min-h-screen ">
+        <div class="content-two bg-[#281154] text-white p-13   items-center text-center   min-h-screen ">
             <h1 class="text-[5rem] text-center  font-josefin font-[300] tracking-tight m-4 ">
                 ♪ Music
             </h1>
@@ -58,8 +66,8 @@
 
         <!--white box started  -->
         <div class="white-box items-center text-center">
-            <div class="ipad-image ">
-                <center><img src="assets/image-2.png" alt="ipad-image" class="max-w-full h-auto "></center>
+            <div class="ipad-image relative bottom-[250px]">
+                <center><img src="assets/images/image-2.png" alt="ipad-image" class="max-w-full h-auto "></center>
             </div><br>
             <div class="white-box-text">
                 <h1 class="font-roboto text-4xl font-[500] pb-10">The movie and TV collection you always wished for.
@@ -80,7 +88,7 @@
                     More</button>
             </div>
             <center>
-                <div class="mac-image items-center p-10"><img src="assets/mac-image.png" alt=""></div>
+                <div class="mac-image items-center p-10"><img src="assets/images/mac-image.png" alt=""></div>
             </center>
         </div>
 
@@ -89,11 +97,11 @@
 
         <!-- content four started -->
         <div class="content-four text-white items-center text-center font-josefin "
-            style="background-image: url(assets/image-3.png); width: 100% ; height: 700px; background-size: cover;">
-            <h3 class=" text-4xl p-5 font-[380]">
+            style="background-image: url(assets/images/image-3.png); width: 100% ; height: 700px; background-size: cover;">
+            <h3 class=" text-4xl p-5 font-[380] pt-64">
                 A world of entertainment. Available wherever you are.
             </h3>
-            <p class="font-light text-3xl pt-6 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eius
+            <p class="font-light text-3xl pt-6 pb-52">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eius
                 reiciendis aspernatur labore, quas
                 veniam nemo rem modi rerum <br>quo quidem quos hic aut exercitationem dicta sequi? Nostrum natus
                 quisquam <br>id nesciunt mollitia quasi dolorem amet ut dolore, eius ipsam?
@@ -103,11 +111,11 @@
         <!-- content four ended -->
 
         <!-- gift cards started -->
-        <div class="gift-cards items-center  p-10">
-            <div class="card-image pt-10 "><img src="assets/gift-card-image.png" alt=""></div>
+        <div class="gift-cards items-center  p-10 flex justify-evenly text-center">
+            <div class="card-image pt-20 w-[40rem]"><img src="assets/images/gift-card-image.png" alt=""></div>
             <div class="card-text">
                 <h2 class="font-roboto font-[400] text-3xl text-center pt-24">Gift Cards</h2><br>
-                <p class="font-light font-josefin text-center text-[1.3rem]">Lorem ipsum dolor sit amet consectetur,
+                <p class="font-light font-josefin text-center text-[1.3rem] w-[600px]">Lorem ipsum dolor sit amet consectetur,
                     adipisicing elit. Dicta commodi inventore pariatur dolores amet, quod enim dolore incidunt. Porro
                     incidunt nesciunt ad necessitatibus est perferendis deleniti non similique blanditiis, adipisci
                     veniam repellat qui voluptates quae consectetur illo temporibus. Impedit, perspiciatis!</p><br>
@@ -126,10 +134,10 @@
 
     <!-- footer started -->
     <footer>
-        <div class="footer bg-[#281154] text-white font-josefin  flex justify-evenly flex-wrap">
-        <div class="shop-conatiner">
-            <h4 class="text-3xl pb-6 font-[350] ">Shop and Learn</h4><hr>
-            <ul class="pt-4 font-light leading-none">
+        <div class="footer bg-[#281154] text-white font-josefin  flex justify-evenly flex-wrap p-24">
+        <div class="footer-links">
+            <h4 class="text-3xl pb-6 font-[350] ">Shop & Learn</h4><hr>
+            <ul class="pt-4 font-light leading-none" >
             <li>Music</li>
             <li>Movies</li>
             <li>Shows</li>
@@ -139,7 +147,7 @@
         </div>
         <div class="orang-store-conatiner">
             <h4 class="text-3xl pb-6 font-[350]" >Orange Store</h4><hr>
-            <ul class="font-light">
+            <ul class="font-light pt-4 leading-none">
             <li>Find a Store</li>
             <li>Today at Orange</li>
             <li>Financing</li>
@@ -149,7 +157,7 @@
         </div>
         <div class="Education-container">
             <h4 class="text-3xl pb-6 font-[350]">Education & Business</h4><hr>
-            <ul class="pt-4 font-light">
+            <ul class="pt-4 font-light leading-none">
             <li>Orange & Education</li>
             <li>Shop for Collage</li>
             <li>Orange & Business</li>
@@ -159,7 +167,7 @@
         </div>
         <div class="about-conatiner">
         <h4 class="text-3xl pb-6 font-[350]">About Orange</h4><hr>
-            <ul class="pt-4 font-light">
+            <ul class="pt-4 font-light leading-none">
             <li>Newsroom</li>
             <li>Orange Leadership</li>
             <li>Investors</li>
@@ -173,7 +181,7 @@
 
     <!-- last content -->
      <div class="end bg-[#270082] p-5 text-white text-center font-roboto">
-        <p class="text-[1.3rem]">Copyright © 2022 ABD</p>
+        <p class="text-[1.3rem]">Copyright © 2025 ABD</p>
      </div>
     <!-- last ended -->
 
