Music Website Completed

--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
         <!-- content four ended -->
 
         <!-- gift cards started -->
-        <div class="gift-cards items-center  p-10 flex justify-evenly  flex-wrap text-center">
-            <div class="card-image pt-20 w-[40rem]"><img src="assets/images/gift-card-image.png" alt=""></div>
-            <div class="card-text">
-                <h2 class="font-roboto font-[400] text-3xl text-center pt-24">Gift Cards</h2><br>
-                <p class="font-light font-josefin text-center text-[1.3rem] w-[600px]">Lorem ipsum dolor sit amet consectetur,
+        <div class="gift-cards flex flex-col lg:flex-row items-center justify-evenly p-6 lg:p-10 gap-10 text-center">
+            <div class="card-image pt-10 lg:pt-20 sm:w-[80%] md:w-[60%] lg:w-[40rem]"><img src="assets/images/gift-card-image.png" alt=""></div>
+            <div class="card-text w-full max-w-[600px]">
+                <h2 class="font-roboto font-[400] text-2xl sm:text-3xl pt-10 lg:pt-24">Gift Cards</h2><br>
+                <p class="font-light font-josefin text-center text-[1.3rem]  lg:w-[600px]">Lorem ipsum dolor sit amet consectetur,
                     adipisicing elit. Dicta commodi inventore pariatur dolores amet, quod enim dolore incidunt. Porro
                     incidunt nesciunt ad necessitatibus est perferendis deleniti non similique blanditiis, adipisci
                     veniam repellat qui voluptates quae consectetur illo temporibus. Impedit, perspiciatis!</p><br>
-                <h6 class="font-roboto text-[1.5rem] font-300 text-center p-6">Already have an Orange myTune Music Gift
+                <h6 class="font-roboto text-lg sm:text-xl font-300 text-center p-6">Already have an Orange myTune Music Gift
                     Cards
                 </h6>
                 <center> <button
